Fixed alignment of question and answer dropdown.

--- a/css/main.css
+++ b/css/main.css
@@ -241,8 +241,7 @@ input[type=submit]:hover{
     color: black;
     cursor: pointer;
     padding: 18px;
-    width: 90%;
-    margin-left: 20px;
+    width: 100%;
     text-align: left;
     border: none;
     outline: none;
